--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Value/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Value/Index.cshtml
@@ -401,9 +401,9 @@
     @Scripts.Render("~/Scripts/filestyle")
 
     <script>
-        var boolAdmin = '@User.IsInRole("Admin")';
-        var boolWriter = '@User.IsInRole("Writer")';
-        var boolReader = '@User.IsInRole("Reader")';
+        var boolAdmin = '@User.IsInRole("Admin")' == "True";
+        var boolWriter = '@User.IsInRole("Writer")' == "True";
+        var boolReader = '@User.IsInRole("Reader")' == "True";
 
         var publicNotesMax = '@publicNotesLenAttr.MaximumLength';
         var internalNotesMax = '@internalNotesLenAttr.MaximumLength';
