--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Currency/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Currency/Index.cshtml
@@ -157,7 +157,10 @@
                 <!--Table-->
                 <button type="button" class="btn btn-default" onclick="toggle2()">Select/Deselect All</button>
                 <button type="button" class="btn btn-default" onclick="Copy()">Copy to Clipboard</button>
-                <button type="button" class="btn btn-default" onclick="Paste()">Paste from Clipboard</button>
+                @if (User.IsInRole("Admin") || User.IsInRole("Writer"))
+                {
+                    <button type="button" class="btn btn-default" onclick="Paste()">Paste from Clipboard</button>
+                }
                 <br />
                 <div class="col-lg-12">
                     <div class="table-responsive">
@@ -229,7 +232,7 @@
 
                                     <dl class="dl-horizontal">
                                         <dt>
-                                            @Html.Label(countryName, new { @class = "control-label col-md-2" })
+                                            @Html.Label(countryName, new { @id= "countryNameLabel", @class = "control-label col-md-2" })
                                         </dt>
 
                                         <dd>
