--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Currency/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Currency/Index.cshtml
@@ -207,7 +207,7 @@
     </div>
 </div>
 
-@*Create A Popup Modal For Add and Details*@
+@*Create A Popup Modal For Add*@
 
 <div class="modal fade" id="MyModal">
     <div class="modal-dialog">
