--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Variable/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Variable/Index.cshtml
@@ -181,7 +181,7 @@
     </div>
 </div>
 
-@*Create A Popup Modal For Add and Details*@
+@*Create A Popup Modal For Add*@
 
 <div class="modal fade" id="MyModal">
     <div class="modal-dialog">
